--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     },
     "dependencies": {
         "concurrently": "^7.6.0",
+        "dotenv": "^16.4.5",
         "nodemon": "^2.0.22"
     }
 }
