--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "concurrently": "^7.6.0",
         "dotenv": "^16.4.5",
         "nodemon": "^2.0.22"
